# gemma-rag

./: .gitignore  app.py  main.py  pyproject.toml
papers_md/: turbo-quant.md
prompts/: planning.md
src/core/: rag_engine.py  vector_store.py
src/utils/: pdf_processor.py
vector_store/: chroma.sqlite3
