[project]
name = "gemma-rag"
version = "0.1.0"
description = "Local RAG for arXiv papers"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "streamlit>=1.56.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    "pymupdf4llm>=0.0.14",
    "pypdf>=5.0.0",
    "ollama>=0.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["src"]